# FUTURE_CS_03

./: README.md  nixpacks.toml  render.yaml
rustshare/: Cargo.toml
rustshare/src/: main.rs
rustshare/templates/: index.html
rustshare/uploads/: 9bda7e1e-da43-408e-8a87-ee770b043ec2  c3eb3f43-4cf5-4bd4-bb42-34da9297616c
