[package]
name = "rustshare"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-multipart = "0.6"
futures-util = "0.3"
uuid = { version = "1.4", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
aes-gcm = "0.10"
sha2 = "0.10"
pbkdf2 = "0.12"
hmac = "0.12"
rand = "0.8"
tera = "1.19"
env_logger = "0.10"
log = "0.4"
chrono = "0.4"